Fix initial auton code