@@ -4,11 +4,10 @@
 
 package frc.robot;
 
-import java.util.Arrays;
-
 import edu.wpi.first.math.controller.RamseteController;
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.math.geometry.Rotation2d;
+import edu.wpi.first.math.geometry.Translation2d;
 import edu.wpi.first.math.trajectory.Trajectory;
 import edu.wpi.first.math.trajectory.TrajectoryConfig;
 import edu.wpi.first.math.trajectory.TrajectoryGenerator;
@@ -35,6 +34,7 @@ import frc.robot.subsystems.Indexer.IndexerState;
 import frc.robot.subsystems.Intake;
 import frc.robot.subsystems.PneumaticClimb;
 import frc.robot.subsystems.Shooter;
+import java.util.List;
 
 /**
  * This class is where the bulk of the robot should be declared. Since Command-based is a
@@ -196,26 +196,34 @@ public class RobotContainer {
    */
   public Command getAutonomousCommand() {
     // An ExampleCommand will run in autonomous
-    TrajectoryConfig setup = new TrajectoryConfig(2, 2);
+    TrajectoryConfig setup = new TrajectoryConfig(1.5, 7.5);
 
     setup.setKinematics(m_drivetrain.getKinematics());
 
-    Trajectory traj = TrajectoryGenerator.generateTrajectory(Arrays.asList(new Pose2d(), new Pose2d(1,0, new Rotation2d())), setup);
+    // Trajectory traj = TrajectoryGenerator.generateTrajectory(Arrays.asList(new Pose2d(), new
+    // Pose2d(1,0, new Rotation2d())), setup);
+    Trajectory traj =
+        TrajectoryGenerator.generateTrajectory(
+            new Pose2d(0, 0, new Rotation2d(0)),
+            List.of(new Translation2d(1, 1), new Translation2d(2, -1)),
+            new Pose2d(3, 0, new Rotation2d(0.0)),
+            setup);
 
-    RamseteCommand command = new RamseteCommand( 
-      traj,
-      m_drivetrain::getPose,                          
-      new RamseteController(2.0,0.7),
-      m_drivetrain.gSimpleMotorFeedforward(),
-      m_drivetrain.getKinematics(),
-      m_drivetrain::getWheelSpeeds,
-      m_drivetrain.getLeftPIDController(),
-      m_drivetrain.getRightPIDController(),
-      m_drivetrain::setOutput,
-      m_drivetrain
-    );
+    RamseteCommand command =
+        new RamseteCommand(
+            traj,
+            m_drivetrain::getPose,
+            new RamseteController(2.0, 0.7),
+            m_drivetrain.gSimpleMotorFeedforward(),
+            m_drivetrain.getKinematics(),
+            m_drivetrain::getWheelSpeeds,
+            m_drivetrain.getLeftPIDController(),
+            m_drivetrain.getRightPIDController(),
+            m_drivetrain::setOutput,
+            m_drivetrain);
 
-    return command.andThen(() -> m_drivetrain.setOutput(0, 0)); //run command and after the command stop the drivetrain
-
+    return command.andThen(
+        () ->
+            m_drivetrain.setOutput(0, 0)); // run command and after the command stop the drivetrain
   }
 }
